Changed data filename

--- a/AIISL.ipynb
+++ b/AIISL.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 142,
    "metadata": {
     "nbpresent": {
      "id": "22483717-60d6-4cb0-8f04-114a460e4db2"
@@ -715,7 +715,7 @@
      "data": {
       "text/html": [
        "<i>Table length=1065891</i>\n",
-       "<table id=\"table4664708904\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4669411056\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>objID</th><th>r_mag</th><th>(u-g)</th><th>(g-r)</th><th>(r-i)</th><th>(i-z)</th><th>specz</th><th>specz_err</th><th>r_mag_err</th><th>(u-g)_err</th><th>(g-r)_err</th><th>(r-i)_err</th><th>(i-z)_err</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>1237645879573873373</td><td>20.103556</td><td>0.61777878</td><td>1.5659828</td><td>0.80243492</td><td>0.34698868</td><td>0.50467163</td><td>0.00020466947</td><td>0.12190636211279779</td><td>0.7569993424418415</td><td>0.1856641077267804</td><td>0.08918345792766323</td><td>0.16939028255106794</td></tr>\n",
@@ -769,13 +769,13 @@
        "1237680531356516547 16.580471 ... 0.006576805839737221 0.010172781358252083"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t = Table.read('data/dataset.dat', format='ascii.commented_header')\n",
+    "t = Table.read('data/dataset.txt', format='ascii.commented_header')\n",
     "X = np.array([t['r_mag'], t['(u-g)'], t['(g-r)'], t['(r-i)'], t['(i-z)']]).T\n",
     "y = np.array(t['specz'])\n",
     "t"
