--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 - Modify dataset download 
 - Write installation readme
 - Finish figure for cross-validation
+- Check slides
 - Check Binder for scikit-garden 
