--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 - Modify dataset download 
 - Write installation readme
 - Finish figure for cross-validation
+- count >1sigma, >2sigma, >3sigma
 - Check slides
 - Check Binder for scikit-garden 
