--- a/AIISL.ipynb
+++ b/AIISL.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 241,
    "metadata": {
     "nbpresent": {
      "id": "0ddd15a0-2d09-4112-a9e1-2ec8b4772062"
@@ -53,11 +53,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder data/ does not exist.\n",
-      "Datafile data/photoz_dataset.txt does not exists.\n",
-      "Creating folder data/.\n",
-      "Downloading data/photoz_dataset.txt.gz from http://perso.astrophy.u-bordeaux.fr/PGratier/data/photoz_dataset.txt.gz.\n",
-      " Unzipping to data/photoz_dataset.txt\n"
+      "Datafile data/photoz_dataset.txt already exists.\n",
+      "Doing nothing\n"
      ]
     }
    ],
@@ -66,15 +63,14 @@
     "import matplotlib.pyplot as pl\n",
     "from corner import hist2d\n",
     "from astropy.table import Table\n",
+    "import os\n",
     "\n",
     "def ungzip(fn):\n",
-    "    import os\n",
     "    import gzip\n",
     "    import shutil\n",
     "    with gzip.open('{}.gz'.format(fn), 'rb') as f_in:\n",
     "        with open(fn, 'wb') as f_out:\n",
     "            shutil.copyfileobj(f_in, f_out)\n",
-    "\n",
     "\n",
     "def get(url):\n",
     "    from urllib import request\n",
@@ -105,8 +101,7 @@
     "        os.mkdir(\"data/\")\n",
     "        download_file(url,file=\"{}/{}.gz\".format(destfolder,filename))\n",
     "        ungzip(\"{}/{}\".format(destfolder,filename))\n",
-    "\n",
-    "        \n",
+    "     \n",
     "download_dataset()"
    ]
   },
@@ -218,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 221,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -247,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 222,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -316,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 223,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -344,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 224,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -370,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 225,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -394,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 226,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -418,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 227,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -442,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 228,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -466,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 229,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -490,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 230,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -514,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 231,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -540,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 232,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -575,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 233,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -601,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 234,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -625,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 235,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -684,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 236,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -711,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 237,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -758,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 239,
    "metadata": {
     "nbpresent": {
      "id": "22483717-60d6-4cb0-8f04-114a460e4db2"
@@ -769,7 +764,7 @@
      "data": {
       "text/html": [
        "<i>Table length=1065891</i>\n",
-       "<table id=\"table4687702728\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4667331192\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>objID</th><th>r_mag</th><th>(u-g)</th><th>(g-r)</th><th>(r-i)</th><th>(i-z)</th><th>specz</th><th>specz_err</th><th>r_mag_err</th><th>(u-g)_err</th><th>(g-r)_err</th><th>(r-i)_err</th><th>(i-z)_err</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>1237645879573873373</td><td>20.103556</td><td>0.61777878</td><td>1.5659828</td><td>0.80243492</td><td>0.34698868</td><td>0.50467163</td><td>0.00020466947</td><td>0.12190636211279779</td><td>0.7569993424418415</td><td>0.1856641077267804</td><td>0.08918345792766323</td><td>0.16939028255106794</td></tr>\n",
@@ -823,13 +818,13 @@
        "1237680531356516547 16.580471 ... 0.006576805839737221 0.010172781358252083"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t = Table.read('data/dataset.txt', format='ascii.commented_header')\n",
+    "t = Table.read('data/photoz_dataset.txt', format='ascii.commented_header')\n",
     "X = np.array([t['r_mag'], t['(u-g)'], t['(g-r)'], t['(r-i)'], t['(i-z)']]).T\n",
     "y = np.array(t['specz'])\n",
     "t"
@@ -1134,13 +1129,12 @@
     }
    },
    "source": [
-    "# Results \n",
-    "A full 11.2% improvement of the root mean squared error FTW !!\n"
+    "# Results \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -1164,32 +1158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 243,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bootstrap                     :True\n",
-      "criterion                     :mse\n",
-      "max_depth                     :None\n",
-      "max_features                  :auto\n",
-      "max_leaf_nodes                :None\n",
-      "min_impurity_decrease         :0.0\n",
-      "min_impurity_split            :None\n",
-      "min_samples_leaf              :1\n",
-      "min_samples_split             :2\n",
-      "min_weight_fraction_leaf      :0.0\n",
-      "n_estimators                  :10\n",
-      "n_jobs                        :8\n",
-      "oob_score                     :False\n",
-      "random_state                  :1234\n",
-      "verbose                       :0\n",
-      "warm_start                    :False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key, value in rf.get_params().items():\n",
     "    print(\"{:<30}:{}\".format(key, value))"
@@ -1705,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 240,
    "metadata": {
     "nbpresent": {
      "id": "aa24dfcd-383d-487d-b866-a46a9c0bba8b"
@@ -1716,17 +1687,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "spec z: 0.08    photo z: 0.10 =  0.45 + -0.14 x r_mag +  0.00 x (u-g) + -0.08 x (g-r) + -0.12 x (r-i) + -0.01 x (i-z)\n",
-      "spec z: 0.09    photo z: 0.09 =  0.45 + -0.14 x r_mag +  0.01 x (u-g) + -0.10 x (g-r) + -0.12 x (r-i) + -0.00 x (i-z)\n",
-      "spec z: 0.10    photo z: 0.13 =  0.45 + -0.14 x r_mag + -0.00 x (u-g) + -0.05 x (g-r) + -0.12 x (r-i) + -0.01 x (i-z)\n",
-      "spec z: 0.09    photo z: 0.35 =  0.45 + -0.01 x r_mag +  0.05 x (u-g) + -0.10 x (g-r) +  0.00 x (r-i) + -0.04 x (i-z)\n",
-      "spec z: 0.08    photo z: 0.08 =  0.45 + -0.14 x r_mag + -0.00 x (u-g) + -0.10 x (g-r) + -0.12 x (r-i) + -0.00 x (i-z)\n",
+      "spec z: 0.08 photo z: 0.10 =  0.45 + -0.14 x r_mag +  0.00 x (u-g) + -0.08 x (g-r) + -0.12 x (r-i) + -0.01 x (i-z)\n",
+      "spec z: 0.09 photo z: 0.09 =  0.45 + -0.14 x r_mag +  0.01 x (u-g) + -0.10 x (g-r) + -0.12 x (r-i) + -0.00 x (i-z)\n",
+      "spec z: 0.10 photo z: 0.13 =  0.45 + -0.14 x r_mag + -0.00 x (u-g) + -0.05 x (g-r) + -0.12 x (r-i) + -0.01 x (i-z)\n",
+      "spec z: 0.09 photo z: 0.35 =  0.45 + -0.01 x r_mag +  0.05 x (u-g) + -0.10 x (g-r) +  0.00 x (r-i) + -0.04 x (i-z)\n",
+      "spec z: 0.08 photo z: 0.08 =  0.45 + -0.14 x r_mag + -0.00 x (u-g) + -0.10 x (g-r) + -0.12 x (r-i) + -0.00 x (i-z)\n",
       "\n",
-      "spec z: 0.08    photo z: 0.70 =  0.45 +  0.03 x r_mag +  0.02 x (u-g) +  0.12 x (g-r) +  0.08 x (r-i) + -0.00 x (i-z)\n",
-      "spec z: 0.09    photo z: 0.66 =  0.45 +  0.05 x r_mag + -0.00 x (u-g) + -0.01 x (g-r) +  0.17 x (r-i) +  0.00 x (i-z)\n",
-      "spec z: 0.10    photo z: 0.62 =  0.45 +  0.10 x r_mag +  0.16 x (u-g) +  0.07 x (g-r) + -0.21 x (r-i) +  0.04 x (i-z)\n",
-      "spec z: 0.09    photo z: 0.34 =  0.45 +  0.04 x r_mag +  0.02 x (u-g) + -0.03 x (g-r) + -0.13 x (r-i) + -0.01 x (i-z)\n",
-      "spec z: 0.08    photo z: 0.37 =  0.45 +  0.06 x r_mag +  0.07 x (u-g) + -0.02 x (g-r) + -0.24 x (r-i) +  0.05 x (i-z)\n"
+      "spec z: 0.08 photo z: 0.70 =  0.45 +  0.03 x r_mag +  0.02 x (u-g) +  0.12 x (g-r) +  0.08 x (r-i) + -0.00 x (i-z)\n",
+      "spec z: 0.09 photo z: 0.66 =  0.45 +  0.05 x r_mag + -0.00 x (u-g) + -0.01 x (g-r) +  0.17 x (r-i) +  0.00 x (i-z)\n",
+      "spec z: 0.10 photo z: 0.62 =  0.45 +  0.10 x r_mag +  0.16 x (u-g) +  0.07 x (g-r) + -0.21 x (r-i) +  0.04 x (i-z)\n",
+      "spec z: 0.09 photo z: 0.34 =  0.45 +  0.04 x r_mag +  0.02 x (u-g) + -0.03 x (g-r) + -0.13 x (r-i) + -0.01 x (i-z)\n",
+      "spec z: 0.08 photo z: 0.37 =  0.45 +  0.06 x r_mag +  0.07 x (u-g) + -0.02 x (g-r) + -0.24 x (r-i) +  0.05 x (i-z)\n"
      ]
     }
    ],
@@ -1738,7 +1709,7 @@
     "\n",
     "highz_features = X_test[y_test>0.8][:nsamples]\n",
     "highz_specz = y_test[y_test>0.8][:nsamples]\n",
-    "format_str = \"spec z:{:5.2f}    photo z:{:5.2f} = {:5.2f} + {:5.2f} x \" + \" + {:5.2f} x \".join(t.colnames[1:6])\n",
+    "format_str = \"spec z:{:5.2f} photo z:{:5.2f} = {:5.2f} + {:5.2f} x \" + \" + {:5.2f} x \".join(t.colnames[1:6])\n",
     "prediction, bias, contributions = ti.predict(rf, lowz_features)\n",
     "for o, p, b, c in zip(lowz_specz, prediction, bias, contributions):\n",
     "    print(format_str.format(o,p,b,*c))\n",
