--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 - count >1sigma, >2sigma, >3sigma
 - Check slides
 - Check Binder for scikit-garden 
+- Modify timing printing
+- Have a backup for best parameters
 
 DONE
 - Modify dataset download 
